# observistral

./: .gitignore  .obstralignore  AGENTS.md  Cargo.toml  LICENSE  README.fr.md  README.ja.md  README.md  package-lock.json  package.json  pyproject.toml
.obstral/: repo_map.config.json  repo_map.eval.json  runtime_eval.json  tui_prefs.json  tui_replay.json
docs/: lite-cli.md  runtime-architecture.md  state-schema.md  tui-agent-split-plan.md
docs/examples/: README.md  existing-repo-bugfix-rust.md  maze-game-pygame.md  maze-game-rust.md
scripts/: __init__.py  e2e-smoke-rust.ps1  e2e-smoke.ps1  e2e-smoke.sh  hf_infer.py  install-debug.ps1  install-lite-cli.ps1  install.ps1  install.sh  kill-obstral.ps1  kill-obstral.sh  list_models.ps1  list_models.sh  obstral-lite.ps1  obstral_lite_cli.py  push.ps1  push.sh  push_ssh.ps1  push_ssh.sh  repo_map.py  run-tui.ps1  run-tui.sh  run-ui-lite.ps1  run-ui.ps1  run-ui.sh  screenshot.ps1  serve_lite.py  ui-smoke.mjs
shared/: governor_contract.json
src/: agent_session.rs  approvals.rs  chatbot.rs  config.rs  eval_merge_gate.rs  exec.rs  file_tools.rs  governor_contract.rs  harness_gate.rs  harness_promotion.rs  lang_detect.rs  loop_detect.rs  main.rs  merge_gate.rs  modes.rs  pending_commands.rs  pending_edits.rs  personas.rs  progress_state.rs  project.rs  prompts.rs  providers.rs  reflection_ledger.rs  repl.rs  repo_map.rs  runtime_eval.rs  server.rs  streaming.rs  task_graph.rs  trace_writer.rs  tui_replay.rs  types.rs
src/observer/: analyzer.rs  benchmark_plan.rs  coder_diagnostic.rs  detector.rs  engine.rs  memory.rs  mod.rs  repo_rules.rs  scorer.rs
src/observistral/: __init__.py  chatbot.py  cli.py  config.py  factory.py  http_client.py  personas.py  transcript.py  types.py
src/observistral/providers/: anthropic.py  base.py  hf_local.py  openai_compat.py
src/providers/: anthropic.rs  hf_subprocess.rs  mod.rs  openai_compat.rs
src/tui/: agent.rs  app.rs  events.rs  intent.rs  merge_gate.rs  mod.rs  prefs.rs  promotion_gate.rs  suggestion.rs  ui.rs
src/tui/agent/: done_gate.rs  evaluator_loop.rs  failure_localization.rs  final_handoff.rs  followup_requirements.rs  harness_evolution.rs  memory.rs  meta_harness.rs  progress_bridge.rs  provider_compat.rs  read_only.rs  repo_scaffold.rs  session_bridge.rs  task_harness.rs
tests/: __init__.py  e2e_smoke.rs  test_chatbot.py  test_cli.py
tests/fixtures/mini-rust-cli/: Cargo.toml  README.md
tests/fixtures/runtime-benchmark-plan-docs-runtime-eval/: .obstral.md
tests/fixtures/runtime-benchmark-plan-runtime-eval/: .obstral.md
tests/fixtures/runtime-benchmark-plan-tui-replay/: .obstral.md
tests/fixtures/runtime-create-file/: .obstral.md  README.md
tests/fixtures/runtime-fix-rust/: Cargo.toml  README.md  session_bridge_resume_seed.json
tests/fixtures/runtime-fix-rust-binary-medium/: Cargo.toml  README.md
tests/fixtures/runtime-fix-rust-binary-module-medium/: Cargo.toml  README.md
tests/fixtures/runtime-fix-rust-medium/: .obstral.md  Cargo.toml  README.md
tests/fixtures/runtime-init-repo/: .obstral.md  README.md
tests/fixtures/runtime-maze-game/: .obstral.md  README.md
tests/fixtures/runtime-maze-game-pygame/: .obstral.md  README.md
tests/fixtures/runtime-self-fix-merge-gate-rollback/: .obstral.md  AGENTS.md  Cargo.toml  README.md
tests/fixtures/runtime-self-fix-observer-rules/: .obstral.md  AGENTS.md  Cargo.toml  README.md
tests/fixtures/runtime-self-fix-pr-ready/: .obstral.md  AGENTS.md  Cargo.toml  README.md
tests/fixtures/runtime-self-fix-pr-ready-merge-approval/: .obstral.md  AGENTS.md  Cargo.toml  README.md
web/: app.js  index.html  styles.css
web/core/: exec.js  sandbox.js
web/observer/: logic.js
(+34 files in other folders)
