[package]
name = "obstral"
version = "0.1.0"
edition = "2021"
description = "Provider-abstracted chat runtime (CLI + local UI)"
license = "MIT"

[dependencies]
anyhow = "1"
async-trait = "0.1"
clap = { version = "4", features = ["derive"] }
once_cell = "1"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
rustyline = "15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "io-util", "time", "process", "sync"] }
ratatui = "0.29"
crossterm = { version = "0.28", features = ["event-stream"] }
tui-textarea = { version = "0.7", features = ["crossterm"] }
futures-util = "0.3"
tempfile = "3"

[dev-dependencies]
httpmock = "0.7"
