[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "observistral"
version = "0.1.0"
description = "Provider-abstracted chatbot runner for OpenAI-compatible, Anthropic, and local Hugging Face backends"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "requests>=2.31",
]

[project.optional-dependencies]
hf = [
  "transformers>=4.41",
  "torch>=2.2",
]

dev = [
  "pytest>=8.0",
]

[project.scripts]
observistral = "observistral.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
