[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "obstral"
version = "0.1.0"
description = "OBSTRAL: provider-abstracted chatbot runner for OpenAI-compatible, Mistral, Anthropic, and local Hugging Face backends"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
hf = [
  "transformers>=4.41",
  "torch>=2.2",
]

dev = []

[project.scripts]
observistral = "observistral.cli:main"
obstral = "observistral.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
