[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "obstral-lite"
version = "0.1.0"
description = "WDAC-friendly OBSTRAL Lite CLI"
readme = "docs/lite-cli.md"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
obstral-lite = "scripts.obstral_lite_cli:main"

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
where = ["."]
include = ["scripts"]

